--- a/spring-integration/pom.xml
+++ b/spring-integration/pom.xml
@@ -2,7 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.baeldung.samples.spring.integration</groupId>
     <artifactId>spring-integration</artifactId>
     <version>1.0.0.BUILD-SNAPSHOT</version>
@@ -15,6 +17,18 @@
         <artifactId>parent-modules</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
+
+    <properties>
+        <spring.version>6.0.0</spring.version>
+        <spring-social.version>1.1.4.RELEASE</spring-social.version>
+        <spring-integration-twitter.version>5.0.13.RELEASE</spring-integration-twitter.version>
+        <javax-activation.version>1.1.1</javax-activation.version>
+        <maven-eclipse-plugin.version>2.10</maven-eclipse-plugin.version>
+        <postgresql.version>42.3.8</postgresql.version>
+        <jakarta.mail.version>2.0.1</jakarta.mail.version>
+        <java-version>21</java-version>
+    </properties>
+
 
     <dependencies>
         <dependency>
@@ -119,17 +133,15 @@
                     <mainClass>com.baeldung.samples.FileCopyConfig</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java-version}</source>
+                    <target>${java-version}</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
-    <properties>
-        <spring.version>6.0.0</spring.version>
-        <spring-social.version>1.1.4.RELEASE</spring-social.version>
-        <spring-integration-twitter.version>5.0.13.RELEASE</spring-integration-twitter.version>
-        <javax-activation.version>1.1.1</javax-activation.version>
-        <maven-eclipse-plugin.version>2.10</maven-eclipse-plugin.version>
-        <postgresql.version>42.3.8</postgresql.version>
-        <jakarta.mail.version>2.0.1</jakarta.mail.version>
-    </properties>
 
 </project>
